fix:alignment of image list

--- a/src/features/Home/components/CoverImageList.scss
+++ b/src/features/Home/components/CoverImageList.scss
@@ -3,10 +3,15 @@
     box-sizing: border-box;
 }
 
-.cover-image-list_item{
+.cover-image-list_item_1,
+.cover-image-list_item_2,
+.cover-image-list_item_3,
+.cover-image-list_item_4,
+.cover-image-list_item_5,
+.cover-image-list_item_6{
     float: left;
     width: 16.65%;
-    padding: 10px;
+    padding: 5px;
 }
 
 .cover-image-list::after{
@@ -14,3 +19,20 @@
     display: table;
     clear: both;
 }
+
+.cover-img{
+    display: block;
+}
+
+.cover-image-list_item_1:hover,
+.cover-image-list_item_2:hover,
+.cover-image-list_item_3:hover,
+.cover-image-list_item_4:hover,
+.cover-image-list_item_5:hover,
+.cover-image-list_item_6:hover {
+    opacity: 0.8;
+}
+
+
+
+  
